AUTOMAKE_OPTIONS = foreign

include_HEADERS =

###USE ALPHABETICAL ORDER FOR MAKEFILE LIST

SUBDIRS = \
  filetransfer \
  bco \
  calo \
  calofitting \
  example \
  globalQA \
  intt \
  inttrawhit \
  inttbco \
  jets \
  kfparticle \
  micromegas \
  mvtx \
  mvtxrawhit \
  siliconseeds \
  tpc \
  tpclasers \
  tpcrawhit \
  tpcseeds \
  tpcsil \
  tracking \
  vertex
